--- a/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
@@ -48,12 +48,14 @@
                     <div class="invalid-feedback">Please enter your password!</div>
                   </div>
 
+                  <!-- TODO(@slamora): hidde until it is implemented
                   <div class="col-12">
                     <div class="form-check">
                       <input class="form-check-input" type="checkbox" name="remember" {% if form.remember.data %}checked{% endif %} id="rememberMe">
                       <label class="form-check-label" for="rememberMe">Remember me</label>
                     </div>
                   </div>
+                  -->
                   <div class="col-12">
                     <button class="btn btn-primary w-100" type="submit">Login</button>
                   </div>
